[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Ubuntu/Ubuntu-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Ubuntu/Ubuntu-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/LearningUI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 600.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 41.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Checking"
align = 1
valign = 1

[node name="ContainerCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 400.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Counter_1" type="Label" parent="MarginContainer/VBoxContainer/ContainerCounter"]
margin_right = 130.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Counter_2" type="Label" parent="MarginContainer/VBoxContainer/ContainerCounter"]
margin_left = 134.0
margin_right = 265.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Counter_3" type="Label" parent="MarginContainer/VBoxContainer/ContainerCounter"]
margin_left = 269.0
margin_right = 400.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 400.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Btn_counter_1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 130.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="inc_count_1" type="Button" parent="MarginContainer/VBoxContainer/Buttons/Btn_counter_1"]
margin_right = 63.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "+"

[node name="dec_count_1" type="Button" parent="MarginContainer/VBoxContainer/Buttons/Btn_counter_1"]
margin_left = 67.0
margin_right = 130.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "-"

[node name="Btn_counter_2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 134.0
margin_right = 265.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="inc_count_2" type="Button" parent="MarginContainer/VBoxContainer/Buttons/Btn_counter_2"]
margin_right = 63.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "+"

[node name="dec_count_2" type="Button" parent="MarginContainer/VBoxContainer/Buttons/Btn_counter_2"]
margin_left = 67.0
margin_right = 131.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "-"

[node name="Btn_counter_3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 269.0
margin_right = 400.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="inc_count_3" type="Button" parent="MarginContainer/VBoxContainer/Buttons/Btn_counter_3"]
margin_right = 63.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "+"

[node name="dec_count_3" type="Button" parent="MarginContainer/VBoxContainer/Buttons/Btn_counter_3"]
margin_left = 67.0
margin_right = 131.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "-"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Btn_counter_1/inc_count_1" to="." method="_on_inc_count_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Btn_counter_1/dec_count_1" to="." method="_on_dec_count_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Btn_counter_2/inc_count_2" to="." method="_on_inc_count_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Btn_counter_2/dec_count_2" to="." method="_on_dec_count_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Btn_counter_3/inc_count_3" to="." method="_on_inc_count_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Btn_counter_3/dec_count_3" to="." method="_on_dec_count_3_pressed"]
